--- a/DeskIt-Hot-Desk-Booking-System/composer.json
+++ b/DeskIt-Hot-Desk-Booking-System/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^3.3",
-        "spatie/laravel-permission": "^6.2"
+        "spatie/laravel-permission": "^6.2",
+        "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
