--- a/DeskIt-Hot-Desk-Booking-System/composer.json
+++ b/DeskIt-Hot-Desk-Booking-System/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^3.3",
+        "livewire/livewire": "^3.4",
+        "robsontenorio/mary": "^1.30",
         "spatie/laravel-permission": "^6.2"
     },
     "require-dev": {
