--- a/DeskIt-Hot-Desk-Booking-System/composer.json
+++ b/DeskIt-Hot-Desk-Booking-System/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^3.3",
+        "power-components/livewire-powergrid": "^5.3",
         "spatie/laravel-permission": "^6.2",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
